--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -38,3 +38,40 @@ h1 {
     padding-bottom:10px;
     margin:0px;
 }
+#calculatorBox {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 250px;
+    height: 300px;
+    background-color: grey;
+    border-color: black;
+    border-style: solid;
+}
+#operatorsBox,#optionsBox,#numbersBox{
+    display: flex;
+    width: 100%;
+}
+#numbersBox {
+    flex: 1 1 0;
+    flex-wrap: wrap;
+}
+#operatorsBox,#optionsBox {
+    height: 50px;
+}
+.number,.altButton {
+    width: 33.33%;
+}
+.operator {
+    width: 25%;
+}
+#display {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    padding: 0px;
+    border-width: 0px;
+    text-align: center;
+    font-size: 24px;
+}
